@@ -152,6 +152,7 @@ Global
 		{DDE1A9F0-4CD6-454E-A9DB-B56946F34ED5}.Release.ActiveCfg = Release|.NET
 		{DDE1A9F0-4CD6-454E-A9DB-B56946F34ED5}.Release.Build.0 = Release|.NET
 		{7439F3D3-5F1B-4D03-ADE1-8EB85F711A53}.Debug.ActiveCfg = Debug|.NET
+		{7439F3D3-5F1B-4D03-ADE1-8EB85F711A53}.Debug.Build.0 = Debug|.NET
 		{7439F3D3-5F1B-4D03-ADE1-8EB85F711A53}.Release.ActiveCfg = Release|.NET
 		{7439F3D3-5F1B-4D03-ADE1-8EB85F711A53}.Release.Build.0 = Release|.NET
 		{22432F75-FD21-474A-AB8F-43100DE79FDB}.Debug.ActiveCfg = Debug|.NET
@@ -159,6 +160,7 @@ Global
 		{22432F75-FD21-474A-AB8F-43100DE79FDB}.Release.ActiveCfg = Release|.NET
 		{22432F75-FD21-474A-AB8F-43100DE79FDB}.Release.Build.0 = Release|.NET
 		{AECBD3E5-110C-4602-B74A-444A61350983}.Debug.ActiveCfg = Debug|.NET
+		{AECBD3E5-110C-4602-B74A-444A61350983}.Debug.Build.0 = Debug|.NET
 		{AECBD3E5-110C-4602-B74A-444A61350983}.Release.ActiveCfg = Release|.NET
 		{AECBD3E5-110C-4602-B74A-444A61350983}.Release.Build.0 = Release|.NET
 		{7FB1D2DC-5CA8-410C-9B9A-3DE517B3BE3A}.Debug.ActiveCfg = Debug|.NET
